// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Combobox renders a default state 1`] = `
<div>
  <div
    class="fui-Combobox"
  >
    <button
      aria-expanded="false"
      class="fui-Combobox__button"
      role="combobox"
      type="button"
    >
      <span
        class="fui-Combobox__expandIcon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          height="1em"
          viewBox="0 0 20 20"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.85 7.65c.2.2.2.5 0 .7l-5.46 5.49a.55.55 0 01-.78 0L4.15 8.35a.5.5 0 11.7-.7L10 12.8l5.15-5.16c.2-.2.5-.2.7 0z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Combobox renders an open listbox 1`] = `
<div>
  <div
    class="fui-Combobox"
  >
    <button
      aria-activedescendant="fluent-option1"
      aria-expanded="true"
      class="fui-Combobox__button"
      role="combobox"
      type="button"
    >
      <span
        class="fui-Combobox__expandIcon"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          height="1em"
          viewBox="0 0 20 20"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.85 7.65c.2.2.2.5 0 .7l-5.46 5.49a.55.55 0 01-.78 0L4.15 8.35a.5.5 0 11.7-.7L10 12.8l5.15-5.16c.2-.2.5-.2.7 0z"
          />
        </svg>
      </span>
    </button>
    <div
      class="fui-Listbox fui-Combobox__listbox"
      role="listbox"
      style="position: fixed; left: 0px; top: 0px; margin: 0px;"
    >
      <div
        aria-selected="false"
        class="fui-Option"
        id="fluent-option1"
        role="option"
      >
        <span
          aria-hidden="true"
          class="fui-Option__checkIcon"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            height="1em"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.03 13.9L3.56 10a.75.75 0 00-1.12 1l4 4.5c.29.32.79.34 1.09.03l10.5-10.5a.75.75 0 00-1.06-1.06l-9.94 9.94z"
            />
          </svg>
        </span>
        Red
      </div>
      <div
        aria-selected="false"
        class="fui-Option"
        id="fluent-option2"
        role="option"
      >
        <span
          aria-hidden="true"
          class="fui-Option__checkIcon"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            height="1em"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.03 13.9L3.56 10a.75.75 0 00-1.12 1l4 4.5c.29.32.79.34 1.09.03l10.5-10.5a.75.75 0 00-1.06-1.06l-9.94 9.94z"
            />
          </svg>
        </span>
        Green
      </div>
      <div
        aria-selected="false"
        class="fui-Option"
        id="fluent-option3"
        role="option"
      >
        <span
          aria-hidden="true"
          class="fui-Option__checkIcon"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            height="1em"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.03 13.9L3.56 10a.75.75 0 00-1.12 1l4 4.5c.29.32.79.34 1.09.03l10.5-10.5a.75.75 0 00-1.06-1.06l-9.94 9.94z"
            />
          </svg>
        </span>
        Blue
      </div>
    </div>
  </div>
</div>
`;
